fix arrow down alignment

--- a/src/hero.css
+++ b/src/hero.css
@@ -1,13 +1,12 @@
 /* INTRO TEXT */
 .Hero {
-  padding-top: 10%;
+  padding-top: 17%;
   height: 90vh;
-  justify-content: center;
-  border: red solid 1px;
 }
 
 .Hero__intro {
   font-size: 6.2rem;
+  margin-bottom: 5rem;
 }
 .Hero__intro > span {
   font-size: 5.6rem;
@@ -15,13 +14,14 @@
 }
 
 /* ARROW */
-.arrow-down {
-  font-size: 7rem;
-  width: auto;
+.arrow-container {
   text-align: center;
+}
+.arrow-down {
+  padding: 0;
+  font-size: 7rem;
   animation: pulse infinite linear 2.5s;
   cursor: pointer;
-  border: red solid 1px;
 }
 
 @keyframes pulse {
@@ -43,8 +43,6 @@
 @media (min-width: 20em) and (max-width: 40em) {
   /* MEDIA HERO */
   .Hero {
-    justify-content: center;
-    align-content: center;
     padding-top: 20%;
     height: auto;
   }
